[project]
name = "syspet"
version = "1.0.0"
description = "Sistema de Gestão de PetShop - Projeto FASE 1 Programação Estruturada Python (FACISA)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "José Ivan Abrantes Virgínio", email = "joseivanabrantes@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
]
keywords = ["python", "education", "structured-programming", "petshop", "facisa"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.5.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.py$"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4", "T20"]
ignore = ["E501"]